SOLVED: Header description overlaps Matt in photo

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -159,4 +159,8 @@ a#latest {
     margin-top: 22px;
     font-size: 28px;
   }
+
+  p {
+    padding-right: calc(30% - 2px);
+  }
 }
